[workspace]
members = ["ttgraph", "ttgraph_macros"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Zizhang Luo <semiwaker@pku.edu.cn>"]
edition = "2021"
description = "Typed/Transactional Graph container"
readme = "../README.md"
repository = "https://github.com/semiwaker/TTGraph"
license = "MIT OR Apache-2.0"
keywords = ["graph", "transaction", "typed", "data structure"]
categories = ["data-structures"]
