[package]
name = "tgraph"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
visible = "0.0.1"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
tgraph_macros = { path = "../tgraph_macros" }
