[package]
name = "ttgraph"
version= "0.1.0"
authors.workspace = true
edition.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
visible = "0.0.1"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
ttgraph_macros = { path = "../ttgraph_macros" }
