[package]
name = "ttgraph_macros"
description = "Proc-macros for TTGraph"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
proc-macro-error = "1.0"
proc-macro2 = "1.0"
quote = { version = "1.0" }
syn = { version = "2.0", features = [
    "full",
    "extra-traits",
    "visit",
    "visit-mut",
    "parsing",
] }
paste = "1.0"
synstructure = "0.13"
change-case = "0.2"

[lib]
proc-macro = true

# [dev-dependencies]
# tgraph = {path = "../tgraph"}
